Fix calculations in Docker containers

--- a/App_practical/Views/Home/Index.cshtml
+++ b/App_practical/Views/Home/Index.cshtml
@@ -28,11 +28,11 @@
             <div class="form-group">
                 <label for="operation">Операция</label>
                 <select class="form-control" name="operation">
-                    <option>Сложить (+)</option>
-                    <option>Вычесть (-)</option>
-                    <option>Умножить (*)</option>
-                    <option>Разделить (/)</option>
-                    <option>Возвести в степень (^)</option>
+                    <option>+</option>
+                    <option>-</option>
+                    <option>*</option>
+                    <option>/</option>
+                    <option>^</option>
                 </select>
             </div>
             <label for="value2">Число 2</label>
