Added database functionality

--- a/App_practical/Views/Home/Index.cshtml
+++ b/App_practical/Views/Home/Index.cshtml
@@ -1,43 +1,37 @@
-﻿@model DataViewModel?
+﻿@model List<Variant>
 
 @{
     ViewData["Title"] = "Калькулятор";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Калькулятор</h1>
-    @if (Model != null)
+    <h2 class="display-6">Список вариантов</h2>
+    <p>
+        <button class="btn btn-primary" onclick="location.href='/home/calculate';">Новый вариант</button>
+    </p>
+    @if (Model.Count > 0)
     {
-        @if (!string.IsNullOrEmpty(Model.ErrorMessage))
-        {
-            <div class="alert alert-danger" role="alert">
-                @Model.ErrorMessage
-            </div>
-        }
-        @if (Model.Result != null)
-        {
-            <div class="alert alert-primary" role="alert">
-                Результат расчёта: @Model.Result
-            </div>
-        }
+        <table class="table table-striped">
+            <tr>
+                <th>Номер варианта</th>
+                <th>Название варианта</th>
+                <th>Действия</th>
+            </tr>
+            @foreach (Variant variant in Model)
+            {
+                <tr>
+                    <td>@variant.Id</td>
+                    <td>@variant.Name</td>
+                    <td>
+                        <a href="/home/calculate/?id=@variant.Id">Изменить</a>
+                        <a href="/home/delete/?id=@variant.Id">Удалить</a>
+                    </td>
+                </tr>
+            }
+        </table>
     }
-    <form method="post">
-        <div class="form-group">
-            <label for="value1">Число 1</label>
-            <input type="text" class="form-control" name="value1">
-            <div class="form-group">
-                <label for="operation">Операция</label>
-                <select class="form-control" name="operation">
-                    <option>+</option>
-                    <option>-</option>
-                    <option>*</option>
-                    <option>/</option>
-                    <option>^</option>
-                </select>
-            </div>
-            <label for="value2">Число 2</label>
-            <input type="text" class="form-control" name="value2">
-        </div>
-        <input type="submit" value="Рассчитать" />
-    </form>
+    else
+    {
+        <label>Нет доступных вариантов для показа.</label>
+    }
 </div>
