--- a/App_practical/Views/Shared/_Layout.cshtml
+++ b/App_practical/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
         </nav>
     </header>
     <div class="container">
+        <div class="text-center">
+            <h1 class="display-4">Калькулятор</h1>
+        </div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -38,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - App_practical - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            2025 - Озорнин Тихон Алексеевич - НМТ-423901
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
