--- a/App_practical/Views/Shared/_Layout.cshtml
+++ b/App_practical/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - App_practical - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Озорнин Тихон Алексеевич, НМТ-423901
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
