Change calculator name

--- a/App_practical/Views/Home/Index.cshtml
+++ b/App_practical/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Калькулятор</h1>
+    <h1 class="display-4">Простой калькулятор</h1>
     @if (Model != null)
     {
         @if (!string.IsNullOrEmpty(Model.ErrorMessage))
